syntax = "proto3";
option go_package = "project-project/pkg/service/menu";

import "google/protobuf/empty.proto";

package menu.service;

message Menu {
  int64  id = 1;
  int64 pid = 2;
  string title = 3;
  string icon = 4;
  string url = 5;
  string filePath = 6;
  string params = 7;
  string node = 8;
  int32 sort = 9;
  int32 status = 10;
  int64 createBy = 11;
  int32 isInner = 12;
  string values = 13;
  int32 showSlider = 14;
  string statusText = 15;
  string innerText  = 16;
  string fullUrl    = 17;
  repeated Menu children = 18;
}
message MenuResponse{
  repeated Menu list = 1;
}

service MenuService {
  rpc GetMenuList(google.protobuf.Empty) returns(MenuResponse){}
}